email for user verification and ui fixes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 
   <%= render 'layouts/nav' %>
   <div class="container mt-4">
-    
+  <%= bootstrap_flash %>
     <%= yield %>
   
   </div> <!-- /container -->
