--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand" href="#">Photo App</a>
+    <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -19,6 +19,22 @@
           <a class="nav-link disabled">Disabled</a>
         </li>
       </ul>
+      <ul class="navbar-nav float-end">
+			<% if current_user %>
+			<li class="col-md-8 user-name">
+				<%= link_to ('<i class="fa fa-user"></i> ' + truncate(current_user.email, length: 25)).html_safe,
+																										edit_user_registration_path, title: 'Edit Profile' %>
+			</li>
+			<li class="col-md-1"> </li>
+			<li class="col-md-3 logout"><%= link_to('Logout', destroy_user_session_path,
+														class: 'btn btn-xs btn-danger', title: 'Logout', :method => :delete) %></li>
+		<% else %>
+			<li class="col-md-4 pull-right">
+				<%= link_to('Sign In', new_user_session_path, class: 'btn btn-primary', title: 'Sign In') %>
+			</li>
+		<% end %>
+      </ul>
+
     </div>
   </div>
 </nav>
